# monolith

./: .gitignore  CLAUDE.md  README.md  workflow.md
.github/scripts/: flash.ps1  flash.sh
.github/workflows/: firmware.yml  pcb.yml  release.yml  sponsors.yml
CAN/: CAN_SIGNALS_SELECTED.md  CLAUDE.md
device/firmware/: .clang-format  .clangd  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults  wokwi.toml
device/firmware/docs/: GPIO_USAGE.md  PINMAP.md
device/firmware/main/: CMakeLists.txt  idf_component.yml  main.c  main.h  mqtt.c  network.c  record.c  webserver.c
device/firmware/main/include/: config.h  main.h  protocol.h
device/firmware/main/misc/: index.html
device/firmware/main/network/: mqtt.c  network.c  webserver.c
device/firmware/main/peripheral/: analog.c  can.c  digital.c  display.c  gps.c  gyroscope.c  sdcard.c
device/hardware/: monolith.kicad_pcb  monolith.kicad_pro  monolith.kicad_sch  sym-lib-table
device/hardware/jlcpcb/: project.db
device/hardware/libraries/: MPU-6500.kicad_sym
device/hardware/monolith-mini/: fp-lib-table  monolith-mini.kicad_pcb  monolith-mini.kicad_pro  monolith-mini.kicad_sch
docs/: build.sh  docs_en.md  docs_ko.md  index.html  ko.html  korean.html  package.json  style.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  index.mjs  mosquitto.conf  package-lock.json  package.json
server/config/: mosquitto.conf  mqtt-proxy.cfg  nginx.conf
web/: index.html  package-lock.json  package.json  vite.config.mjs
web/src/: App.vue  main.js
web/src/router/: index.js
(+73 files in other folders)
